# shipwright

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  copier.yml  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  python-ci.yml  python-release.yml  release.yml
docs/: ci-cd.md  library.md  release-policy.md
docs/superpowers/plans/: 2026-06-05-g12-shared-injection.md  2026-06-05-g4-cli-config-dry.md
personas/: README.md  adversarial-review-agent.md  advisor-contrarian.md  advisor-executor.md  advisor-expansionist.md  advisor-first-principles.md  advisor-outsider.md  architect-agent.md  beta-tester-agent.md  code-debug-agent.md  code-security-agent.md  devex-tooling-agent.md  devops-release-agent.md  independent-review-agent.md  knowledge-systems-agent.md  project-documentation-agent.md  qa-test-architect-agent.md  qm-agent.md  ux-design-agent.md
scripts/: check-bundle-drift.sh  sync-bundle.sh  template-selftest.sh
shipwright/: __init__.py
shipwright/design/: __init__.py  banner.py  console.py  palette.py
shipwright/eval/: __init__.py  corpus.py  harness.py
shipwright/security/: eval.py  theme.py
shipwright_kit/: __init__.py  cli.py  config.py
shipwright_kit/design/: __init__.py  console.py  glyphs.py  output.py  tiers.py
shipwright_kit/eval/: __init__.py  harness.py  metrics.py
shipwright_kit/security/: __init__.py  eval.py  injection.py  theme.py
skills/: README.md
skills/design/: SKILL.md
skills/dogfood/: SKILL.md
skills/meetup/: SKILL.md
skills/onboard/: SKILL.md
skills/propagate/: SKILL.md
skills/quality-gate/: SKILL.md
skills/release/: SKILL.md
skills/review/: SKILL.md
skills/scaffold/: SKILL.md
templates/python-cli/: copier.yml
templates/python-cli/project/: .copier-answers.yml.jinja  .env.example.jinja  .gitignore  CLAUDE.md.jinja  README.md.jinja  dogfood.sh.jinja  justfile.jinja  pyproject.toml.jinja
templates/python-cli/project/.github/workflows/: ci.yml.jinja
templates/python-cli/project/tests/: test_detect.py.jinja
templates/python-cli/project/tooling/: ruff-base.toml.jinja
templates/python-cli/project/{{ package_name }}/: banner.py.jinja  config.py.jinja  main.py.jinja
tests/: test_cli.py  test_config.py  test_packaging.py  test_packs_entrypoint.py  test_release_config.py  test_template_wiring.py  test_tooling.py
tests/design/: test_banner.py  test_console.py  test_glyphs.py  test_output.py  test_output_schema_contract.py  test_palette.py  test_tiers.py
tests/eval/: test_corpus.py  test_harness.py  test_import_light.py  test_metrics.py  test_schema_contract.py  test_verify_corpus.py
tests/integration/: test_eval_pipeline.py
tests/integration/fixtures/: sample.csv
tests/security/: test_eval.py  test_injection.py  test_injection_import_light.py  test_theme.py
tooling/: ruff-base.toml
