[project]
name = "shipwright"
version = "0.1.0"
description = "Shipwright — an AI-agent-operated development framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0"]

# uv workspace: members are the locally-integrated projects (gitignored).
# When projects/ is empty, the glob matches nothing — that is fine.
[tool.uv.workspace]
members = ["projects/*"]

[tool.uv]
# The framework root is not a publishable package itself.
package = false

# Dogfooding: the framework lints itself with the SAME canonical config
# that scaffolded projects will receive.
[tool.ruff]
extend = "tooling/ruff-base.toml"
