[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipwright"
version = "0.1.0"
description = "Shipwright — AI-agent dev framework + design-token library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.7"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0", "hypothesis>=6.0", "rich>=13.7"]

[tool.setuptools.packages.find]
include = ["shipwright*"]

[tool.uv.workspace]
members = ["projects/*"]

[tool.ruff]
extend = "tooling/ruff-base.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
