[build-system]
# setuptools>=77 is required for the SPDX string-form `license = "MIT"` (PEP 639).
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The bare `shipwright` is taken on PyPI (unrelated 6si
# tool), so the dist is `shipwright-kit`; the IMPORT name is `shipwright_kit`.
name = "shipwright-kit"
version = "0.2.0"
description = "Shipwright — AI-agent dev framework + import-light design/eval/security library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Christian Huhn" }]
keywords = ["ci", "dev-tooling", "eval", "design-tokens", "severity", "quality-gates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.7"]
banner = ["pyfiglet>=1.0"]

[project.urls]
Homepage = "https://github.com/duathron/shipwright"
Repository = "https://github.com/duathron/shipwright"
Documentation = "https://github.com/duathron/shipwright/blob/main/docs/library.md"
Changelog = "https://github.com/duathron/shipwright/blob/main/CHANGELOG.md"
Issues = "https://github.com/duathron/shipwright/issues"

[project.entry-points."shipwright_kit.packs"]
security = "shipwright_kit.security.theme:SecurityTheme"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.8", "pre-commit>=4.0", "hypothesis>=6.0", "rich>=13.7", "copier>=9", "packaging"]

[tool.setuptools.packages.find]
include = ["shipwright_kit*"]

[tool.setuptools.package-data]
shipwright_kit = ["py.typed"]

[tool.uv.workspace]
members = ["projects/*"]

[tool.ruff]
extend = "tooling/ruff-base.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=shipwright_kit --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["shipwright_kit"]
branch = true

[tool.mypy]
python_version = "3.11"
files = ["shipwright_kit"]
ignore_missing_imports = true
